--- a/document_basic.html
+++ b/document_basic.html
@@ -661,7 +661,7 @@
                                                                        &lt;p&gt;This is a simple webpage created using HTML.&lt;/p&gt; 
                                                                        &lt;/body&gt; 
                                                                        &lt;/html&gt;      
-                                                                       <button type="Try it" class="btn btn-primary"><a href="C:\Users\user1.LENOVO1\Desktop\Docy_HTML_Template\live-web-editor\index.html" target="_blank">Try it</button></a>
+                                                                       <button type="Try it" class="btn btn-primary"><a href="live-web-editor/index.html">Try it</button></a>
                                                                     </code>
                                         </pre>
                                     </div>
